--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.4.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
