--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
